--- a/templates/app_nav.html
+++ b/templates/app_nav.html
@@ -1,10 +1,15 @@
 {% extends 'base.html' %}
 {% load i18n %}
+{% block title %}后台管理导航{% endblock %}
 
 {% block boby %}
     <main role="main">
-      <div class="d-flex p-2 alert-secondary justify-content-center">
-          <h4>Evcloud后台配置项</h4>
+       <div class="py-2 bg-light">
+          <div class="container">
+              <div class="row alert-secondary justify-content-center">
+                 <h4>配置项</h4>
+              </div>
+          </div>
       </div>
       <div class="py-2 bg-light">
         <div class="container">
@@ -17,10 +22,10 @@
                     服务器配置
                 </div>
                 <div class="card-body">
-                    <a class="btn btn-outline-primary btn-sm btn-block" href="/admin/pcservers/department/" role="button">部门</a>
-                    <a class="btn btn-outline-primary btn-sm btn-block" href="/admin/pcservers/room/" role="button">机房</a>
-                    <a class="btn btn-outline-primary btn-sm btn-block" href="/admin/pcservers/servertype/" role="button">型号</a>
-                    <a class="btn btn-outline-primary btn-sm btn-block" href="/admin/pcservers/pcserver/" role="button">服务器</a>
+                    <a class="btn btn-outline-primary btn-sm btn-block" href="/admin/pcservers/department/" role="button" target="_blank">部门</a>
+                    <a class="btn btn-outline-primary btn-sm btn-block" href="/admin/pcservers/room/" role="button" target="_blank">机房</a>
+                    <a class="btn btn-outline-primary btn-sm btn-block" href="/admin/pcservers/servertype/" role="button" target="_blank">型号</a>
+                    <a class="btn btn-outline-primary btn-sm btn-block" href="/admin/pcservers/pcserver/" role="button" target="_blank">服务器</a>
                 </div>
               </div>
             </div>
@@ -31,9 +36,9 @@
                     宿主机配置
                 </div>
                 <div class="card-body">
-                    <a class="btn btn-outline-primary btn-sm btn-block" href="/admin/compute/center/" role="button">分中心</a>
-                    <a class="btn btn-outline-primary btn-sm btn-block" href="/admin/compute/group/" role="button">宿主机组</a>
-                    <a class="btn btn-outline-primary btn-sm btn-block" href="/admin/compute/host/" role="button">宿主机</a>
+                    <a class="btn btn-outline-primary btn-sm btn-block" href="/admin/compute/center/" role="button" target="_blank">分中心</a>
+                    <a class="btn btn-outline-primary btn-sm btn-block" href="/admin/compute/group/" role="button" target="_blank">宿主机组</a>
+                    <a class="btn btn-outline-primary btn-sm btn-block" href="/admin/compute/host/" role="button" target="_blank">宿主机</a>
                 </div>
               </div>
             </div>
@@ -44,8 +49,8 @@
                     网络配置
                 </div>
                 <div class="card-body">
-                    <a class="btn btn-outline-primary btn-sm btn-block" href="/admin/network/vlan/" role="button">VLAN子网</a>
-                    <a class="btn btn-outline-primary btn-sm btn-block" href="/admin/network/macip/" role="button">MAC IP地址</a>
+                    <a class="btn btn-outline-primary btn-sm btn-block" href="/admin/network/vlan/" role="button" target="_blank">VLAN子网</a>
+                    <a class="btn btn-outline-primary btn-sm btn-block" href="/admin/network/macip/" role="button" target="_blank">MAC IP地址</a>
                 </div>
               </div>
             </div>
@@ -57,8 +62,8 @@
                     CEPH配置
                 </div>
                 <div class="card-body">
-                    <a class="btn btn-outline-primary btn-sm btn-block" href="/admin/ceph/cephcluster/" role="button">CEPH集群</a>
-                    <a class="btn btn-outline-primary btn-sm btn-block" href="/admin/ceph/cephpool/" role="button">CEPH池</a>
+                    <a class="btn btn-outline-primary btn-sm btn-block" href="/admin/ceph/cephcluster/" role="button" target="_blank">CEPH集群</a>
+                    <a class="btn btn-outline-primary btn-sm btn-block" href="/admin/ceph/cephpool/" role="button" target="_blank">CEPH池</a>
                 </div>
               </div>
             </div>
@@ -69,9 +74,9 @@
                     云主机配置
                 </div>
                 <div class="card-body">
-                    <a class="btn btn-outline-primary btn-sm btn-block" href="/admin/image/vmxmltemplate/" role="button">云主机XML配置</a>
-                    <a class="btn btn-outline-primary btn-sm btn-block" href="/admin/image/image/" role="button">云主机系统镜像</a>
-                    <a class="btn btn-outline-primary btn-sm btn-block" href="/admin/vms/flavor/" role="button">云主机硬件配置</a>
+                    <a class="btn btn-outline-primary btn-sm btn-block" href="/admin/image/vmxmltemplate/" role="button" target="_blank">云主机XML配置</a>
+                    <a class="btn btn-outline-primary btn-sm btn-block" href="/admin/image/image/" role="button" target="_blank">云主机系统镜像</a>
+                    <a class="btn btn-outline-primary btn-sm btn-block" href="/admin/vms/flavor/" role="button" target="_blank">云主机硬件配置</a>
                 </div>
               </div>
             </div>
@@ -82,7 +87,7 @@
                    云硬盘配置
                 </div>
                 <div class="card-body">
-                    <a class="btn btn-outline-primary btn-sm btn-block" href="/admin/vdisk/quota/" role="button">云硬盘池</a>
+                    <a class="btn btn-outline-primary btn-sm btn-block" href="/admin/vdisk/quota/" role="button" target="_blank">云硬盘池</a>
                 </div>
               </div>
             </div>
@@ -94,7 +99,7 @@
                     VPN配置
                 </div>
                 <div class="card-body">
-                    <a class="btn btn-outline-primary btn-sm btn-block" href="/admin/vpn/vpnconfig/" role="button">VPN配置文件</a>
+                    <a class="btn btn-outline-primary btn-sm btn-block" href="/admin/vpn/vpnconfig/" role="button" target="_blank">VPN配置文件</a>
                 </div>
               </div>
             </div>
@@ -105,7 +110,7 @@
                     PCIE配置
                 </div>
                 <div class="card-body">
-                    <a class="btn btn-outline-primary btn-sm btn-block" href="/admin/device/pcidevice/" role="button">PCIE设备</a>
+                    <a class="btn btn-outline-primary btn-sm btn-block" href="/admin/device/pcidevice/" role="button" target="_blank">PCIE设备</a>
                 </div>
               </div>
             </div>
@@ -114,12 +119,15 @@
         </div>
       </div>
 
-      <div class="d-flex p-2 alert-secondary justify-content-center">
-          <h4>Evcloud后台管理项</h4>
+      <div class="py-2 bg-light">
+          <div class="container">
+              <div class="row alert-secondary justify-content-center">
+                 <h4>管理项</h4>
+              </div>
+          </div>
       </div>
       <div class="py-2 bg-light">
         <div class="container">
-
           <div class="row">
             <div class="col-md-3">
               <div class="card mb-4 shadow-sm">
@@ -127,11 +135,11 @@
                     云主机管理
                 </div>
                 <div class="card-body">
-                    <a class="btn btn-outline-secondary btn-sm btn-block" href="/admin/vms/vm/" role="button">云主机</a>
-                    <a class="btn btn-outline-secondary btn-sm btn-block" href="/admin/vms/vmarchive/" role="button">云主机归档标</a>
-                    <a class="btn btn-outline-secondary btn-sm btn-block" href="/admin/vms/vmdisksnap/" role="button">云主机快照</a>
-                    <a class="btn btn-outline-secondary btn-sm btn-block" href="/admin/vms/migratetask/" role="button">云主机迁移记录</a>
-                    <a class="btn btn-outline-secondary btn-sm btn-block" href="/admin/vms/vmlog/" role="button">云主机错误日志</a>
+                    <a class="btn btn-outline-secondary btn-sm btn-block" href="/admin/vms/vm/" role="button" target="_blank">云主机</a>
+                    <a class="btn btn-outline-secondary btn-sm btn-block" href="/admin/vms/vmarchive/" role="button" target="_blank">云主机归档标</a>
+                    <a class="btn btn-outline-secondary btn-sm btn-block" href="/admin/vms/vmdisksnap/" role="button" target="_blank">云主机快照</a>
+                    <a class="btn btn-outline-secondary btn-sm btn-block" href="/admin/vms/migratetask/" role="button" target="_blank">云主机迁移记录</a>
+                    <a class="btn btn-outline-secondary btn-sm btn-block" href="/admin/vms/vmlog/" role="button" target="_blank">云主机错误日志</a>
                 </div>
               </div>
             </div>
@@ -141,13 +149,13 @@
                     云硬盘管理
                 </div>
                 <div class="card-body">
-                    <a class="btn btn-outline-secondary btn-sm btn-block" href="/admin/vdisk/vdisk/" role="button">云硬盘</a>
+                    <a class="btn btn-outline-secondary btn-sm btn-block" href="/admin/vdisk/vdisk/" role="button" target="_blank">云硬盘</a>
                 </div>
                 <div class="d-flex p-2 bg-info text-white justify-content-center">
                     NOVNC管理
                 </div>
                 <div class="card-body">
-                    <a class="btn btn-outline-secondary btn-sm btn-block" href="/admin/novnc/token/" role="button">NOVNC客户端TOKENS</a>
+                    <a class="btn btn-outline-secondary btn-sm btn-block" href="/admin/novnc/token/" role="button" target="_blank">NOVNC客户端TOKENS</a>
                 </div>
               </div>
             </div>
@@ -157,9 +165,9 @@
                     用户管理
                 </div>
                 <div class="card-body">
-                    <a class="btn btn-outline-secondary btn-sm btn-block" href="/admin/users/userprofile/" role="button">用户</a>
-                    <a class="btn btn-outline-secondary btn-sm btn-block" href="/admin/auth/group/" role="button">用户分组</a>
-                    <a class="btn btn-outline-secondary btn-sm btn-block" href="/admin/vpn/vpnauth/" role="button">VPN用户</a>
+                    <a class="btn btn-outline-secondary btn-sm btn-block" href="/admin/users/userprofile/" role="button" target="_blank">用户</a>
+                    <a class="btn btn-outline-secondary btn-sm btn-block" href="/admin/auth/group/" role="button" target="_blank">用户分组</a>
+                    <a class="btn btn-outline-secondary btn-sm btn-block" href="/admin/vpn/vpnauth/" role="button" target="_blank">VPN用户</a>
                 </div>
               </div>
             </div>
@@ -169,13 +177,13 @@
                     认证管理
                 </div>
                 <div class="card-body">
-                    <a class="btn btn-outline-secondary btn-sm btn-block" href="/admin/authtoken/tokenproxy/" role="button">身份认证TOKENS</a>
+                    <a class="btn btn-outline-secondary btn-sm btn-block" href="/admin/authtoken/tokenproxy/" role="button" target="_blank">身份认证TOKENS</a>
                 </div>
                 <div class="d-flex p-2 bg-info text-white justify-content-center">
                    日志管理
                 </div>
                 <div class="card-body">
-                    <a class="btn btn-outline-secondary btn-sm btn-block" href="/admin/admin/logentry/" role="button">操作日志</a>
+                    <a class="btn btn-outline-secondary btn-sm btn-block" href="/admin/admin/logentry/" role="button" target="_blank">操作日志</a>
                 </div>
               </div>
             </div>
