修改镜像启用操作

--- a/image/templates/image_delete.html
+++ b/image/templates/image_delete.html
@@ -24,4 +24,9 @@
 {% endblock %}
 
 {% block script %}
+    <script>
+         window.onload = function() {
+            $("#nav_image_list").addClass("active");// 激活列表导航栏
+         };
+    </script>
 {% endblock %}
