--- a/image/templates/image_vm_create.html
+++ b/image/templates/image_vm_create.html
@@ -50,4 +50,9 @@
 {% endblock %}
 
 {% block script %}
+    <script>
+         window.onload = function() {
+            $("#nav_image_list").addClass("active");// 激活列表导航栏
+         };
+    </script>
 {% endblock %}
