--- a/vms/templates/vm_edit.html
+++ b/vms/templates/vm_edit.html
@@ -22,7 +22,7 @@
                         <dt class="col-2 text-right">镜像:</dt> <dd class="col-10">{{ vm.image }}</dd>
                         <dt class="col-2 text-right">分中心:</dt> <dd class="col-10">{{ vm.host.group.center }}</dd>
                         <dt class="col-2 text-right">机组:</dt> <dd class="col-10">{{ vm.host.group }}</dd>
-                        <dt class="col-2 text-right">CPU:</dt> <dd class="col-10">{{ vm.vcpu }}</dd>
+                        <dt class="col-2 text-right">CPU:</dt> <dd class="col-10">{{ vm.vcpu }}核</dd>
                         <dt class="col-2 text-right">MEM:</dt> <dd class="col-10">{{ vm.mem }}GB</dd>
                         <dt class="col-2 text-right">备注:</dt> <dd class="col-10">{{ vm.remarks }}</dd>
                     </dl>
