--- a/templates/app_nav.html
+++ b/templates/app_nav.html
@@ -7,7 +7,7 @@
        <div class="py-2 bg-light">
           <div class="container">
               <div class="row alert-secondary justify-content-center">
-                 <h4>配置项</h4>
+                 <h4 class="m-2">配置项</h4>
               </div>
           </div>
       </div>
@@ -15,8 +15,8 @@
         <div class="container">
 
           <div class="row">
-            <div class="col-md-3">
-              <div class="card mb-4 shadow-sm">
+            <div class="col-md-3 mb-4">
+              <div class="card shadow-sm h-100">
                 <div class="d-flex p-2 bg-secondary text-white justify-content-center">
                     <span class="badge badge-light m-1">1</span>
                     服务器配置
@@ -29,8 +29,8 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-3">
-              <div class="card mb-4 shadow-sm">
+            <div class="col-md-3 mb-4">
+              <div class="card shadow-sm h-100">
                 <div class="d-flex p-2 bg-secondary text-white justify-content-center">
                     <span class="badge badge-light m-1">2</span>
                     宿主机配置
@@ -42,8 +42,8 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-3">
-              <div class="card mb-4 shadow-sm">
+            <div class="col-md-3 mb-4">
+              <div class="card shadow-sm h-100">
                 <div class="d-flex p-2 bg-secondary text-white justify-content-center">
                     <span class="badge badge-light m-1">3</span>
                     网络配置
@@ -55,8 +55,8 @@
               </div>
             </div>
 
-             <div class="col-md-3">
-              <div class="card mb-4 shadow-sm">
+             <div class="col-md-3 mb-4">
+              <div class="card mb-4 shadow-sm h-100">
                 <div class="d-flex p-2 bg-secondary text-white justify-content-center">
                     <span class="badge badge-light m-1">4</span>
                     CEPH配置
@@ -67,8 +67,10 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-3">
-              <div class="card mb-4 shadow-sm">
+          </div>
+          <div class="row">
+            <div class="col-md-3 mb-4">
+              <div class="card shadow-sm h-100">
                 <div class="d-flex p-2 bg-secondary text-white justify-content-center">
                     <span class="badge badge-light m-1">5</span>
                     云主机配置
@@ -80,8 +82,8 @@
                 </div>
               </div>
             </div>
-             <div class="col-md-3">
-              <div class="card mb-4 shadow-sm">
+             <div class="col-md-3 mb-4">
+              <div class="card shadow-sm h-100">
                 <div class="d-flex p-2 bg-secondary text-white justify-content-center">
                    <span class="badge badge-light m-1">6</span>
                    云硬盘配置
@@ -92,8 +94,8 @@
               </div>
             </div>
 
-             <div class="col-md-3">
-              <div class="card mb-4 shadow-sm">
+             <div class="col-md-3 mb-4">
+              <div class="card shadow-sm h-100">
                 <div class="d-flex p-2 bg-secondary text-white justify-content-center">
                     <span class="badge badge-light m-1">7</span>
                     VPN配置
@@ -103,8 +105,8 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-3">
-              <div class="card mb-4 shadow-sm">
+            <div class="col-md-3 mb-4">
+              <div class="card shadow-sm h-100">
                 <div class="d-flex p-2 bg-secondary text-white justify-content-center">
                     <span class="badge badge-light m-1">8</span>
                     PCIE配置
@@ -122,15 +124,15 @@
       <div class="py-2 bg-light">
           <div class="container">
               <div class="row alert-secondary justify-content-center">
-                 <h4>管理项</h4>
+                 <h4 class="m-2">管理项</h4>
               </div>
           </div>
       </div>
       <div class="py-2 bg-light">
         <div class="container">
           <div class="row">
-            <div class="col-md-3">
-              <div class="card mb-4 shadow-sm">
+            <div class="col-md-3 mb-4">
+              <div class="card shadow-sm h-100">
                 <div class="d-flex p-2 bg-info text-white justify-content-center">
                     云主机管理
                 </div>
@@ -143,8 +145,8 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-3">
-              <div class="card mb-4 shadow-sm">
+            <div class="col-md-3 mb-4">
+              <div class="card shadow-sm h-100">
                 <div class="d-flex p-2 bg-info text-white justify-content-center">
                     云硬盘管理
                 </div>
@@ -159,8 +161,8 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-3">
-              <div class="card mb-4 shadow-sm">
+            <div class="col-md-3 mb-4">
+              <div class="card shadow-sm h-100">
                 <div class="d-flex p-2 bg-info text-white justify-content-center">
                     用户管理
                 </div>
@@ -171,8 +173,8 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-3">
-              <div class="card mb-4 shadow-sm">
+            <div class="col-md-3 mb-4">
+              <div class="card shadow-sm h-100">
                 <div class="d-flex p-2 bg-info text-white justify-content-center">
                     认证管理
                 </div>
