--- a/vpn/templates/add.html
+++ b/vpn/templates/add.html
@@ -8,6 +8,9 @@
 {% block boby %}
     <div class="container-fluid">
         <form method="post">
+        <input type="date" name="date" value="2020-03-31"
+class="form-control dateinput form-control"
+placeholder="Select a date" required="" id="id_date"/>
             <div class="card">
                 <div class="card-header">
                     <span class="card-title"><strong>添加 VPN</strong></span>
