--- a/image/templates/image_list.html
+++ b/image/templates/image_list.html
@@ -168,7 +168,7 @@
                                                     data-image-id="{{ image.id }}">硬断电
                                             </button>
                                             <button class="dropdown-item bg-danger btn-vm-delete" type="button"
-                                                    data-image-id="{{ image.id }}">删除VM
+                                                    data-image-id="{{ image.id }}">强制删除VM
                                             </button>
                                         </div>
                                         <a class="btn btn-sm btn-danger operation-button"
@@ -213,6 +213,19 @@
                                         <span class="col-sm-3 form-control-plaintext"
                                               id="sys_type_display">{{ image.user }}</span>
                                     </div>
+                                    {% if user.is_superuser and  image.vm_uuid %}
+                                        <div class="form-group row">
+                                            <label for="name" class="col-sm-1 col-form-label">虚拟机ID</label>
+                                            <span class="col-sm-3 form-control-plaintext"
+                                                  id="name">{{ image.vm_uuid }}</span>
+                                            <label for="version" class="col-sm-1 col-form-label">虚拟机内存</label>
+                                            <span class="col-sm-3 form-control-plaintext"
+                                                  id="version">{{ image.vm_mem }}GB</span>
+                                            <label for="sys_type_display" class="col-sm-1 col-form-label">虚拟机CPU</label>
+                                            <span class="col-sm-3 form-control-plaintext"
+                                                  id="sys_type_display">{{ image.vm_vcpu }}核</span>
+                                        </div>
+                                    {% endif %}
                                 </form>
                             </div>
                         </td>
