vm模型增加镜像相关字段，记录vm创建时的系统镜像信息，供后续vm的相关操作使用；因为image信息可能随时修改，所以不能通过外键使用最新的image信息

--- a/device/templates/pci_mount.html
+++ b/device/templates/pci_mount.html
@@ -64,7 +64,7 @@
                                 <td><input type="checkbox" class="item-checkbox" value="{{ vm.hex_uuid }}" name="select_vm"></td>
                                 <td title="{{ vm.hex_uuid }}"><b>{{ vm.mac_ip.ipv4 }}</b></td>
                                 <td>{{ vm.user }}</td>
-                                <td>{{ vm.image }}</td>
+                                <td>{{ vm.image_name }}</td>
                                 <td>
                                     {{ vm.vcpu }} / {{ vm.mem|sizeformat:'MB' }}
                                 </td>
