--- a/vms/templates/vm_detail.html
+++ b/vms/templates/vm_detail.html
@@ -83,9 +83,9 @@
                                 <div class="col-md-2"><strong>镜像信息</strong></div>
                                 <div class="col-md-10">
                                     <div class="row">
-                                        <div class="col-md-4"><strong>系统镜像</strong>：{{ vm.image }}</div>
-                                        <div class="col-md-4"><strong>CEPH集群</strong>：{{ vm.image.ceph_pool.ceph.name }}</div>
-                                        <div class="col-md-4"><strong>Pool Name</strong>：{{ vm.image.ceph_pool.pool_name }}</div>
+                                        <div class="col-md-4"><strong>系统镜像</strong>：{{ vm.image_name }}</div>
+                                        <div class="col-md-4"><strong>CEPH集群</strong>：{{ vm.ceph_pool.ceph.name }}</div>
+                                        <div class="col-md-4"><strong>Pool Name</strong>：{{ vm.ceph_pool.pool_name }}</div>
                                     </div>
                                 </div>
                             </div>
