--- a/vms/templates/vm_disk_expand.html
+++ b/vms/templates/vm_disk_expand.html
@@ -23,7 +23,7 @@
                             <dt class="col-2 text-right">云主机IP:</dt> <dd class="col-10">{{ vm.ipv4 }}</dd>
                             <dt class="col-2 text-right">CPU数:</dt> <dd class="col-10">{{ vm.vcpu }}</dd>
                             <dt class="col-2 text-right">内存:</dt> <dd class="col-10">{{ vm.mem }} MB</dd>
-                            <dt class="col-2 text-right">镜像:</dt> <dd class="col-10">{{ vm.image }}</dd>
+                            <dt class="col-2 text-right">镜像:</dt> <dd class="col-10">{{ vm.image_name }}</dd>
                             <dt class="col-2 text-right">系统盘大小:</dt>
                             <dd class="col-10" id="id-vm-sys-disk-size" data-sys-disk-size="{{ vm.get_sys_disk_size }}">{{ vm.get_sys_disk_size }} Gb</dd>
                             <dt class="col-2 text-right">机组:</dt> <dd class="col-10">{{ vm.host.group }}</dd>
