--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,14 @@
 {% load static %}
 {% load custom_tags %}
+{% load globalconfig_tags %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="{% static 'bootstrap-4.4.1/css/bootstrap.min.css' %}">
 	{% block head %}{% endblock %}
-	<title>{% block title %}{% endblock %}</title>
+    {% get_global_config as global_config %}
+	<title> {% if global_config %} {{ global_config.sitename }} | {% endif %}{% block title %}{% endblock %}</title>
     <style>
         html{
             height: 100%;
@@ -37,7 +39,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="/">
             <img src="{% static 'images/logo/logo.png' %}" width="30" height="30" class="d-inline-block align-top" alt="">
-            EVCloud</a>
+            {% if global_config %} {{ global_config.sitename }} {% else %} EVcloud {% endif %}</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -101,7 +103,8 @@
         {% block boby %}{% endblock %}
     </div>
     <footer class="page-footer text-center bg-light p-2">
-        <p><a href="http://www.cnic.cas.cn/">中国科学院计算机网络信息中心</a> 科技云部</p>
+        <p><a href="{% if global_config %}{{ global_config.poweredby }}
+            {% else %} https://gitee.com/cstcloud-cnic/evcloud {% endif %}">Powered by Evcloud </a> </p>
     </footer>
     <script type="text/javascript" src="{% static 'jquery/jquery-3.4.1.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'bootstrap-4.4.1/js/bootstrap.bundle.min.js' %}"></script>
